Fixed a scrollbar appearing for a split-second when joining a room.

--- a/server/sass/_core.scss
+++ b/server/sass/_core.scss
@@ -16,6 +16,7 @@ section.main {
 }
 
 body {
+	overflow: hidden;
 	font-family: "Roboto";
 	font-weight: 500;
 }
